style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap");
* {
  font-family: 'Montserrat', sans-serif;
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  outline: none;
  border: none;
  text-decoration: none;
  -webkit-transition: all .2s linear;
  transition: all .2s linear;
}

html {
  font-size: 62.5%;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

html::-webkit-scrollbar {
  width: 1rem;
}

html::-webkit-scrollbar-track {
  background: transparent;
}

html::-webkit-scrollbar-thumb {
  background:#edad2d;
}

body {
  background: url(/media/45-degree-fabric-dark.png) no-repeat;
  background-size: cover;
  background-image: linear-gradient(to right, rgba(238, 162, 75, 0.822) , rgba(218, 166, 87, 0.466) , #79aaa4c5);  background-position: center;
  background-attachment: fixed;
}

body.active {
  padding-left: 30rem;
}

section {
  padding: 5rem 9%;
}


p {
  color: #2f6120;
  font-size: 1.5em;
}


h4 {
  font-size: 4em;
  font-weight: 600;
}

img {
  margin-left: 6%;
  max-width: 100%;
  max-height: 100%;
  

}


.container1 {
  background: rgba(255, 218, 185, 0);
  border: 4px solid rgba(165, 42, 42, 0);
  align-items: center;
  justify-content: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-radius: 2%;
  text-align: center;
  padding: 18%;
  background-image: url(media/amazon-1.jpg);
  margin-bottom: 18em;

}

.container1 img {
  background: rgba(255, 218, 185, 0.877);
  text-align: center;


}



.content .card-image {

height: 350px;
width: auto;
}


.title1 {
  margin-bottom: 70px;

  color: #65c2b5;
  font-size: 7rem;

}

.title2 {
  margin-bottom: 70px;
  color: #fa9600;
  font-size: 7rem;

}


    .imgBx1 {
      /*border: 4px solid rgb(165, 42, 165);*/
      justify-content: center;
      background-image: url(media/Elipse\ 1.png);
      background-position: center;
      background-size: cover;
      

    }

    .imgBx2 {
      /*border: 4px solid rgb(52, 165, 42);*/
      justify-content: center;
      background-image: url(media/Elipse\ 2.png);
      background-position: center;
      background-size: cover;

    }


.heading {

  text-align: center;
  font-size: 5.5rem;
  color: #65c2b5;
  text-transform: capitalize;
  margin-bottom: 1em;
  margin-top: 1em;
  
}

.heading span {
  color: #fa9600;
}

.btn {
  margin-top: 1rem;
  display: inline-block;
  border-radius: 5rem;
  padding: 1.2rem 3rem;
  border: 0.2rem solid #20bdad;
  cursor: pointer;
  background: none;
  color: #448b84;
  font-size: 2rem;
  text-transform: capitalize;
}

.btn:hover {
  border-color: #ebac00;
  color: rgb(236, 219, 199);
  background: #45d1c3;
  transform: scaleX(1.1);
}

.header {
  position: fixed;
  top: 0;
  left: -31rem;
  height: 100%;
  width: 30rem;
  background: #f5b350;
  padding: 2rem;
  z-index: 1000;
}

.header.active {
  left: 0;
}

.header .logo {
  font-size: 4.3rem;
  color: #3ea399;
  font-weight: 1000;
}

.header .navbar {
  padding: 30% 0;
}

.header .navbar a {
  display: block;
  margin: 2rem 0;
  font-size: 2rem;
  color: #487772;
}

.header .navbar a:hover {
  text-decoration: underline;
  text-underline-offset: .7rem;
}

.header .share {
  text-align: center;
}

.header .share a {
  height: 5rem;
  width: 5rem;
  border-radius: 8%;
  line-height: 5rem;
  font-size: 2rem;
  color: #5e9c96de;
  background: rgb(255, 156, 8);
  margin: 0 .3rem;
}

.header .share a:hover {
  background: rgb(60, 155, 131);
  color: rgb(241, 154, 71);
}

.header .credit {
  text-align: center;
  font-size: 2rem;
  color: #fff;
  margin-top: 3rem;
  line-height: 1.5;
}

#menu-btn {
  border-radius: 6%;
  position: fixed;
  top: 2rem;
  left: 2rem;
  background: #4ac2b6;
  color: rgba(255, 224, 189, 0.705);
  height: 5rem;
  width: 5rem;
  line-height: 5rem;
  font-size: 2.5rem;
  cursor: pointer;
  z-index: 1100;
  text-align: center;
}

#menu-btn.fa-times {
  top: 1rem;
  left: 24rem;
}

.banner {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  gap: 3rem;
  -ms-flex-wrap: wrap-reverse;
      flex-wrap: wrap-reverse;
}

.banner .content {
  -webkit-box-flex: 1;
      -ms-flex: 1 1 41rem;
          flex: 1 1 41rem;
}

.banner .content span {
  font-size: 2.5rem;
  color: #407a74;
}

.banner .content h3 {
  font-size: 7rem;
  color: #58b6ab;
  text-transform: capitalize;
  padding-top: 1rem;
}

.banner .content p {
  padding: 1rem 0;
  font-size: 1.7rem;
  color: #407a74;
  line-height: 2;
  padding: 1rem 0;
}

.banner .image {
  -webkit-box-flex: 1;
      -ms-flex: 1 1 41rem;
          flex: 1 1 41rem;
}

.banner .image img {
  border-radius: 4%;
  display: flex;
  width: 100%;
}



.container {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-flow: wrap;
  text-align: center;
  background: #ffbaba00;
  margin: 20px;
  box-sizing: border-box;

}



.products .container img {
  background: #ffdaba00;
  border: 4px solid rgba(165, 42, 42, 0);
  height: 600px;
  }

.products .slide img {
  height: 25rem;
  margin: 5rem 0;
  -webkit-transform: scale(0.5);
          transform: scale(0.5);
}

.products .slide h3 {
  padding: 1rem 0;
  font-size: 2.5rem;
  color: #444;
  text-transform: capitalize;
  opacity: 0;
}

.products .slide .btn {
  margin-bottom: 4em;
  /*opacity: 0;*/
}

.products .swiper-slide-active img {
  -webkit-transform: scale(1);
          transform: scale(1);
}

.products .swiper-slide-active h3, .products .swiper-slide-active .btn {
  opacity: 1;
}

.products-preview-container {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1200;
  min-height: 100vh;
  width: 100%;
  background: rgba(0, 0, 0, 0.8);
  display: none;
}

.products-preview-container .product-preview {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  gap: 3rem;
  background: #edad2d;
  border-radius: 2%;
  padding: 9%;
  position: relative;
  display: none;
}

.products-preview-container .product-preview .fa-times {
  position: absolute;
  top: 2rem;
  right: 2rem;
  font-size: 4rem;
  cursor: pointer;
  color: rgb(206, 8, 8);
}

.products-preview-container .product-preview .fa-times:hover {
  color: #edad2d;
  -webkit-transform: rotate(90deg);
          transform: rotate(90deg);
}

.products-preview-container .product-preview .image {
  -webkit-box-flex: 1;
      -ms-flex: 1 1 40rem;
          flex: 1 1 40rem;
}

.products-preview-container .product-preview .image img {
  width: 100%;
}

.products-preview-container .product-preview .content {
  -webkit-box-flex: 1;
      -ms-flex: 1 1 40rem;
          flex: 1 1 40rem;
}

.products-preview-container .product-preview .content h3 {
  font-size: 5rem;
  color: #5bb9b9;
  text-transform: capitalize;
}

.products-preview-container .product-preview .content p {
  font-size: 2rem;
  color: #4c9b9b;
  line-height: 2;
  padding: 1rem 0;
}

.products-preview-container .product-preview .content .stars {
  padding: 1rem 0;
  font-size: 1.7rem;
}

.products-preview-container .product-preview .content .stars i {
  color: #5bb9b9;
}

.products-preview-container .product-preview .content .stars span {
  color: #666;
}

.products-preview-container .product-preview .content .price {
  font-size: 3rem;
  color: #444;
  text-transform: capitalize;
  padding: 1rem 0;
}

.swiper {
  width: 800px;
  height: 400px;

}

.service {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (minmax(30rem, 1fr))[auto-fit];
      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
  gap: 2rem;
}

.service .box {
  text-align: center;
  padding: 2rem;
}

.service .box i {
  font-size: 4rem;
  margin-bottom: 1rem;
  color: #fa8e00;
  
}

.service .box p {
  font-size: 2rem;
  color: #408574;
  line-height: 2;
  padding: 1rem 0;
}


.reviews .slide {
  text-align: center;
  padding: 3rem;
}

.reviews .slide i {
  font-size: 4rem;
  color: #408574;
  margin-bottom: 1rem;
}

.reviews .slide p {
  font-size: 1.5rem;
  color: #408574;
  line-height: 2;
  padding: 1rem 0;
}

.reviews .slide img {
  height: 10rem;
  width: 10rem;
  border-radius: 50%;
  margin: 1rem 0;
}

.reviews .slide h3 {
  font-size: 1.7rem;
  color: #408574;
  text-transform: capitalize;
}

.contact {
  padding-bottom: 12rem;
}

.contact .row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  gap: 3rem;
}

.contact .row form {
  -webkit-box-flex: 1;
      -ms-flex: 1 1 41rem;
          flex: 1 1 41rem;
}

.contact .row form .box {
  padding: 2rem 0;
  margin-bottom: 1rem;
  border-radius: 2%;
  color: #4a7e6e;
  background-color: #f8c24c;
  font-size: 1.6rem;
  border-bottom: 0.2rem #408574;
  width: 100%;
}

.contact .row form .box:focus {
  border-color: #edad2d;
}

.contact .row form textarea {
  height: 15rem;
  resize: none;
}

.contact .row .contact-info {
  -webkit-box-flex: 1;
      -ms-flex: 1 1 41rem;
          flex: 1 1 41rem;
}

.contact .row .contact-info h3 {
  padding-bottom: 1rem;
  font-size: 4rem;
  color: #408574;
  text-transform: capitalize;
}

.contact .row .contact-info .grapgh {
  font-size: 1.4rem;
  color: #408574;
  line-height: 2;
  padding: 1rem 0;
}

.contact .row .contact-info .icons {
  padding: 1.5rem 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 1.5rem;
}

.contact .row .contact-info .icons i {
  height: 5rem;
  width: 5rem;
  line-height: 5rem;
  border-radius: 50%;
  font-size: 2rem;
  background: #edad2d;
  color: #408574;
  text-align: center;
}

.contact .row .contact-info .icons p {
  font-size: 1.5rem;
  color: #408574;
  line-height: 2;
  padding: 1rem 0;
  padding: 0;
}

.contact .row .contact-info .share {
  padding-top: 2rem;
}

.contact .row .contact-info .share a {
  font-size: 3rem;
  margin-right: 2rem;
  color: #408574;
}

.contact .row .contact-info .share a:hover {
  color: #edad2d;
}

@media (max-width: 1200px) {
  body.active {
    padding-left: 0;
  }
  header.active {
    -webkit-box-shadow: 0 0 0 100vw #000000cc;
            box-shadow: 0 0 0 100vw #408574;
  }
}

@media (max-width: 20px) { 
  .swiper .swiper-slide-active {
    max-width: 60px;
    max-height: 30px;
    width: 60px;
    height: 30px;
  
  }
}

@media (max-width: 30px) { 
  .swiper-slide-active {
    max-width: 60px;
    max-height: 30px;
    width: 60px;
    height: 30px;
  
  }
}


@media (max-width: 991px) {
  html {
    font-size: 55%;
  }
  section {
    padding: 3rem 2rem;
  }
} 

@media (max-width: 70px) {
  
}

@media (max-width: 450px) {
  html {
    font-size: 50%;
  }
  .banner .content h3 {
    font-size: 3rem;
  }
  .products .slide img {
    height: 15rem;
  }
}

